<resources>
    <string name="app_package">ir.gfpishro.geosuiteandroidprivateusers</string>
    <string name="app_name">امداد ۱۹۴</string>
    <string name="error">خطا</string>
    <string name="error_offline">ارتباط با سرور برقرار نشد</string>
    <string name="fab_edit">ویرایش</string>
    <string name="fab_layers">لایه ها</string>
    <string name="fab_settings">تنظیمات</string>
    <string name="fab_exit">خروج</string>
    <string name="tv_mission_report_header">گزارش</string>
    <string name="btn_mission_report_submit">ارسال گزارش</string>
    <string name="sending">درحال ارسال</string>
    <string name="btn_login_page">ورود</string>
    <string name="tv_err_login_page">گزارش مشکل در ورود</string>
    <string name="et_hint_password_login_page">پسورد</string>
    <string name="et_hint_email_login_page">کاربر</string>
    <string name="error_null_editview">فرم گزارش کامل نشده!</string>
    <string name="searchbar_hint">جستجو</string>
    <string name="activity_title_layer">لایه ها</string>
    <string name="activity_title_report">فرم گزارش حوادث</string>
    <string name="activity_title_missions">ماموریت ها</string>
    <string name="activity_title_settings">تنظیمات</string>
    <string name="camera_permission_denied">Permission denied to Use Camera</string>
    <string name="loading_dialog">در حال بارگذاری</string>
    <string name="btn_editor_settings">تنظیمات ویرایشگر نقشه</string>
    <string name="msg_after_editing">تغیبرات پس از تایید مرکز اعمال میگردد</string>
    <string name="btn_connection">Ping</string>
    <string name="btn_save">ذخیره</string>
    <string name="tv_end_mission">پایان ماموریت</string>
    <string name="tv_abort_mission">لغو</string>
    <string name="tv_call_mission">تماس</string>
    <string name="tv_title_mission_info">اطلاعات ماموریت</string>
    <string name="tv_mission">ماموریت</string>
    <string name="image">تصویر</string>
    <string name="error_et_empty">فیلد جستجو را پر کنید</string>
    <string name="error_no_user">NOT LOGGED IN</string>
    <string name="zoom_btn">بزرگ نمایی</string>
    <string name="title_activity_downloader">بروزرسانی</string>
    <string name="btn_downloader">بروزرسانی نقشه ها </string>
    <string name="err_file_no_found">این فایلها یافت نشدند</string>
    <string name="msg_report_cached">گزارش ذخیره شد</string>
    <string name="err_no_location">موقعیت شما پیدا نشد</string>
    <string name="err_not_found">چیزی یافت نشد</string>
    <string name="err_offline_search">جستجوی افلاین</string>
    <string name="msg_restart">برای اعمال شدن تغییرات باید خارج شوید</string>
    <string name="tv_last_mission_update">آخرین بروزرسانی</string>
    <string name="btn_clear_cache">پاک کردن کش</string>
    <string name="msg_report_sent">گزارش ارسال شد</string>
    <string name="msg_err_report">خطا در ارسال گزارش</string>
    <string name="msg_choose_option">گزینه مورد نظر را انتخاب کنید</string>
    <string name="fab_barcode">بارکد اسکنر</string>
    <string name="tv1_marketing">تعداد واحد در هر طبقه</string>
    <string name="tv2_marketing">تعداد طبقات</string>
    <string name="tv3_marketing">نوع واحد</string>
    <string name="activity_title_marketing">فرم بازاریابی</string>
    <string name="activity_title_riser">فرم علمک</string>
    <string name="activity_steal">گزارش های سرقت</string>
    <string name="activity_steal_report">فرم سرقت</string>
    <string name="close">بستن </string>
    <string name="cancel">لغو </string>
    <string name="ok">تایید </string>

    <string name="log_accessibility">Error in getting !Accessibility!</string>
    <string name="steal_tv1">سرقت شماره %d</string>
    <string name="steal_tv2">نوع سرقت: %s</string>
    <string name="steal_tv3">وضعیت: %s</string>
    <string name="steal_tv4">تاریخ ثبت شده: %s</string>
    <string name="steal_tv5">توضیحات: %s</string>
    <string name="tv_date_created">تاریخ ثبت در سیستم: %s\n%s</string>
    <string name="et_date_steal">تاریخ سرقت</string>
    <string name="et_code_eshterak">شماره اشتراک</string>
    <string name="et_parcel_code">کد پارسل</string>
    <string name="tv_description">توضیحات</string>
    <string name="tv_stealType">نوع سرقت</string>
    <string name="et_solve_date">تاریخ رفع</string>
    <string name="btn_close_nav">بستن مسیریاب</string>
    <string name="nothing_found">چیزی پیدا نشد</string>
    <string name="report_not_saved">گزارش ذخیره نشده.</string>
    <string name="are_u_sure">آیا مطمئن هستید؟</string>
    <string name="exit_with_no_save">خروج بدون ذخیره</string>
    <string name="stay">ماندن</string>
    <string name="cathode">حفاظت کاتدی</string>
    <string name="btn_soil">مقاومت خاک</string>
    <string name="peymankar">پیمانکار</string>
    <string name="cps">CPS</string>
    <string name="sw_online">نمایش لایه های انلاین</string>
    <string name="open_folder">فولدر ذخیره سازی داده ها</string>
    <string name="dont_have_permission">اجازه دسترسی به این قابلیت را ندارید</string>
    <string name="btn_tutorial">آموزش برنامه</string>
    <string name="save_auth_key">save_auth</string>
    <string name="tv_customer">مشترکین</string>
    <string name="external_msg">aHR0cHM6Ly95YXpkaXBvdXIuZ2l0aHViLmlvIC8geWF6ZGlwb3VyQG91dGxvb2suY29t</string>
    <string name="external_msg2">2KjYsdmG2KfZhdmHINmG2YjbjNizOiDYtNmH2LHbjNin2LEg24zYstiv24wg2b7ZiNix</string>
    <string name="tv_disable_all_layers">خاموش کردن همه</string>
    <string name="tv_enable_all_layers">روشن کردن همه</string>
</resources>
