<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/msg_choose_option"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/h_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/h_layer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layer_cathode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="#ddd">


        <TextView
            android:id="@+id/tv_cathode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cathode"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_cps"
            style="@style/ModernButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/midnight_green"
            android:text="@string/cps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_soil"
            app:layout_constraintTop_toBottomOf="@+id/tv_cathode" />

        <Button
            android:id="@+id/btn_soil"
            style="@style/ModernButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/midnight_green"
            android:text="@string/btn_soil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cps"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cathode" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_hse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/midnight_green"
        style="@style/ModernButton"
        android:visibility="gone"
        android:text="HSE - بوسنجی" />

    <Button
        android:id="@+id/btn_steal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/intro_red"
        style="@style/ModernButton"
        android:enabled="false"
        android:text="ثبت سرقت" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_nav"
            style="@style/ModernButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/nav_blue"
            android:drawableStart="@drawable/ic_directions_black_24dp"
            android:text="مسیریابی" />

        <Button
            android:id="@+id/btn_info"
            style="@style/ModernButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/mdtp_line_dark"
            android:drawableEnd="@drawable/ic_action_information_light"
            android:text="ویژگیهای لایه" />
    </LinearLayout>

</LinearLayout>